# compa

./: .gitignore  COMPA_Claude평가_vs_35B.md  COMPA_매칭_개선_결정사항.md  COMPA_매칭_프로세스_정리.md  COMPA_보고서_작성규칙.md  LICENSE  README.md  _add_disclaimer.py  _add_pagenum.py  _add_proj_table.py  _add_year_col.py  _build_full_inputs.py  _del_summary.py  _demand_table.py  _final_check.py  _fix1_banmal.py  _fix5_banmal.py  _fix_colwidth.py  _fix_meta4.py  _fix_meta_sections.py  _fix_neg_reasons.py  _fix_projtable_pids.py  _fix_punts.py  _fix_punts2.py  _fix_spacing.py  _fix_usecase.py  _fmt_top5.py  _justify.py  _patch_docx.py  _patent_prep.py  _proj_meta_prep.py  _rebuild_final.py  _regen_banmal.py  _regen_prep.py  _regen_run.py  _regen_shortreason.py  _sample10_prep.py  _strip_source.py  _verify_report.py  build_report.py  (+13 more)
company_to_project/: llm_pipeline.py
docs/: prompt_keyword_extraction.md  prompt_matching_score.md
examples/: prompt_pipeline_demo.py
project_to_company/: data_pipeline.py  llm_pipeline.py
src/compa/: __init__.py
tests/: test_hello.py
